Fix white space for highlighter block code

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -586,6 +586,10 @@ li.sidebar__submenu-item.wip a::before {
     border-radius: 4px;
 }
 
+.docs code.highlighter-rouge{
+    white-space: pre-wrap;
+}
+
 .highlight {
     border-radius: 4px;
 }
